--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "devDependencies": {
     "axios": "^0.16.2",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.1",
     "jquery": "^3.1.1",
@@ -19,9 +23,6 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
