--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-enum-prop-type": "^0.1.0",
     "react-router": "^2.8.1"
   }
 }
